<resources>
    <string name="app_name">My_Task</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="already_a_user">Already a user?</string>
    <string name="login">LOGIN</string>
    <string name="_1_question_title">1_question_title</string>
    <string name="a_option_1">A) Option 1</string>
    <string name="b_option_2">B) Option 2</string>
    <string name="c_option_3">C) Option 3</string>
    <string name="d_option_4">D) Option 4</string>
    <string name="title">Title</string>
    <string name="import_quiz_csv_file">Import Quiz (CSV File)</string>
    <string name="add">Add</string>
    <string name="time_limit_in_seconds">Time Limit (in seconds)</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="result">Result</string>
    <string name="back_to_home">Back to Home</string>
    <string name="delete">Delete</string>
</resources>