<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_question_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/a_option_1"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_option_2"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_option_3"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_option_4"
            android:textStyle="bold" />
    </RadioGroup>

</LinearLayout>