<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".ui.screens.addQuiz.AddQuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/add_quiz"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quiz_title"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutTimeLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTimeLimit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_limit_in_seconds"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnImportQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/import_quiz_csv_file" />


                <Button
                    android:id="@+id/btnAddQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/cancel" />


            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</FrameLayout>
