<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.quiz.QuizFragment">


    <RelativeLayout
        android:id="@+id/rlQuiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tbTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Welcome"
                app:titleCentered="true"
                app:titleTextAppearance="@style/ToolbarTitle"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:background="@drawable/gradient_bg"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="Time"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed" />


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/done"
            android:textColor="@color/black"
            app:cornerRadius="10dp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAlignment="center"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/back_to_home" />


    </LinearLayout>


</FrameLayout>